# splitjar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/workflows/: release.yml  test.yml
backend/: alembic.ini  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial.py  0002_settlements.py
backend/app/routers/: expenses.py  formula.py  groups.py  members.py  settlements.py  stats.py  transactions.py
backend/app/services/: balances.py  formula.py
backend/tests/: conftest.py  test_api.py  test_balances.py  test_formula.py  test_settlements.py  test_transactions.py
docs/: homeassistant.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BalancesOverview.tsx  FormulaInput.tsx  MonthPicker.tsx  PeriodFilter.tsx  ShareEditor.tsx
frontend/src/lib/: formula.ts
frontend/src/pages/: ExpensesTab.tsx  GroupHome.tsx  GroupsList.tsx  SettingsTab.tsx  StatsTab.tsx
